[gd_scene load_steps=16 format=3 uid="uid://d4g168syijs4b"]

[ext_resource type="PackedScene" uid="uid://vhinnm1q51dv" path="res://scene/screen/ScreenWithFader.tscn" id="1_0ycfy"]
[ext_resource type="Script" path="res://scene/screen/ScreenPlay.gd" id="2_h7l11"]
[ext_resource type="PackedScene" uid="uid://b8y2hwrk2s6s8" path="res://scene/field/Field.tscn" id="3_5jttc"]
[ext_resource type="PackedScene" uid="uid://bm1wurm48wv1t" path="res://scene/misc/Button3D.tscn" id="4_v2rq7"]
[ext_resource type="Texture2D" uid="uid://3kjns4rw6bw8" path="res://texture/blocks.png" id="5_182lp"]

[sub_resource type="BoxMesh" id="BoxMesh_sbnm5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3vkuw"]
albedo_color = Color(0.568643, 0.876782, 0.965516, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qr61f"]
albedo_color = Color(0.568643, 0.876782, 0.965516, 1)

[sub_resource type="QuadMesh" id="QuadMesh_qhj17"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ua6cp"]
transparency = 1
albedo_color = Color(0.423529, 0.423529, 0.423529, 0.568627)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bst5o"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("5_182lp")
uv1_scale = Vector3(0.125, 0.125, 0.125)
uv1_offset = Vector3(0.875, 0.125, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vc6sf"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("5_182lp")
uv1_scale = Vector3(0.125, 0.125, 0.125)
uv1_offset = Vector3(0, 0.375, 0)

[sub_resource type="QuadMesh" id="QuadMesh_18s0a"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pax6r"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("5_182lp")
uv1_scale = Vector3(0.125, 0.125, 0.125)
uv1_offset = Vector3(0.875, 0.75, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_62e3d"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("5_182lp")
uv1_scale = Vector3(0.125, 0.125, 0.125)
uv1_offset = Vector3(0.75, 0.875, 0)

[node name="SceneRoot" instance=ExtResource("1_0ycfy")]
script = ExtResource("2_h7l11")

[node name="Camera3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 3.5, 12.5)

[node name="Background" parent="Camera3D" index="0"]
materials = Array[String](["res://material/bck02.material", "res://material/bck03.material", "res://material/bck04.material"])
speed = 0.15
min_dst = Vector2(-10, -4.5)
max_dst = Vector2(10, 4.5)

[node name="Field" parent="." index="3" instance=ExtResource("3_5jttc")]

[node name="Border" type="Node3D" parent="." index="4"]

[node name="Right" type="MeshInstance3D" parent="Border" index="0"]
transform = Transform3D(1, 0, 0, 0, 9, 0, 0, 0, 2, -1, 3.5, 0)
mesh = SubResource("BoxMesh_sbnm5")
surface_material_override/0 = SubResource("StandardMaterial3D_3vkuw")

[node name="Left" type="MeshInstance3D" parent="Border" index="1"]
transform = Transform3D(1, 0, 0, 0, 9, 0, 0, 0, 2, 8, 3.5, 0)
mesh = SubResource("BoxMesh_sbnm5")
surface_material_override/0 = SubResource("StandardMaterial3D_qr61f")

[node name="Top" type="MeshInstance3D" parent="Border" index="2"]
transform = Transform3D(10, 0, 0, 0, 0.5, 0, 0, 0, 2, 3.5, -0.75, 0)
mesh = SubResource("BoxMesh_sbnm5")
surface_material_override/0 = SubResource("StandardMaterial3D_qr61f")

[node name="Bottom" type="MeshInstance3D" parent="Border" index="3"]
transform = Transform3D(10, 0, 0, 0, 0.5, 0, 0, 0, 2, 3.5, 7.75, 0)
mesh = SubResource("BoxMesh_sbnm5")
surface_material_override/0 = SubResource("StandardMaterial3D_qr61f")

[node name="Floor" type="MeshInstance3D" parent="Border" index="4"]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, 3.5, 3.5, -1)
mesh = SubResource("QuadMesh_qhj17")
surface_material_override/0 = SubResource("StandardMaterial3D_ua6cp")

[node name="ButtonPause" parent="." index="5" instance=ExtResource("4_v2rq7")]
transform = Transform3D(1.245, 0, 0, 0, 1.245, 0, 0, 0, 1.245, -0.105, 10.2, 0)

[node name="MeshInstance3D" parent="ButtonPause" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_bst5o")

[node name="Label3D" parent="ButtonPause" index="2"]
visible = false
text = "<- Back"

[node name="ButtonInfo" parent="." index="6" instance=ExtResource("4_v2rq7")]
transform = Transform3D(1.245, 0, 0, 0, 1.245, 0, 0, 0, 1.245, 7.065, 10.2, 0)

[node name="MeshInstance3D" parent="ButtonInfo" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_vc6sf")

[node name="Label3D" parent="ButtonInfo" index="2"]
visible = false
text = "<- Back"

[node name="LabelPause" type="Label3D" parent="." index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.591082, 10.1966, 0)
text = "PAUSE"
font_size = 100
outline_size = 32
horizontal_alignment = 0

[node name="LabelNumber" type="Label3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 11.777, 0)
text = "level number"
font_size = 100
outline_size = 32

[node name="LabelInfo" type="Label3D" parent="." index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.55441, 10.1966, 0)
text = "TARGETS"
font_size = 100
outline_size = 32
horizontal_alignment = 2

[node name="MeshCombo" type="MeshInstance3D" parent="." index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.144, 8.994, 0)
visible = false
mesh = SubResource("QuadMesh_18s0a")
surface_material_override/0 = SubResource("StandardMaterial3D_pax6r")

[node name="LabelCombo" type="Label3D" parent="MeshCombo" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.643077, 0.00561333, 0)
text = "COMBO"
font_size = 100
outline_size = 32
horizontal_alignment = 0

[node name="MeshRest" type="MeshInstance3D" parent="." index="11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.15, -2.246, 0)
mesh = SubResource("QuadMesh_18s0a")
surface_material_override/0 = SubResource("StandardMaterial3D_62e3d")

[node name="LabelRest" type="Label3D" parent="MeshRest" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.643077, 0.00561333, 0)
text = "COMBO"
font_size = 100
outline_size = 32
horizontal_alignment = 0

[connection signal="combo_changed" from="Field" to="." method="_on_field_combo_changed"]
[connection signal="game_finished" from="Field" to="." method="_on_field_game_finished"]
[connection signal="rest_changed" from="Field" to="." method="_on_field_rest_changed"]
[connection signal="pressed" from="ButtonPause" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="ButtonInfo" to="." method="_on_button_info_pressed"]

[editable path="ButtonPause"]
[editable path="ButtonInfo"]
